--- a/_config.yml
+++ b/_config.yml
@@ -19,18 +19,18 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Steal this Repo
-email: miklb@miklb.com
+email: boris@bmannconsulting.com
 description: "Starter repo for using GitHub Pages with Jekyll IndieWeb theme"
-baseurl: "" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyll-indieweb
-github_username:  miklb
+baseurl: "/jekyll-indieweb-demo" # the subpath of your site, e.g. /blog
+# url: "https://projects.bmannconsulting.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: bmann
+github_username:  bmann
 
 paginate: 5
 build: 1
 # Can be over ridden with author: in Front Matter
-author: Jekyll IndieWeb
-bio: Writing a love letter to the web.
+author: Boris Mann
+bio: Open Source. Indie Web.
 
 author_img: https://cdn.miklb.com/content/uploads/2019/11/16222044/wsi-imageoptim-steal-this-repo.png
 
